--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.fade {
+/* .fade {
   animation: fade-in-keyframes 2s;
 }
 @keyframes fade-in-keyframes {
@@ -8,4 +8,22 @@
   to {
     opacity: 1;
   }
+}
+ */
+
+@keyframes fade-in-left {
+  0% {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.fade {
+  opacity: 0;
+  animation: fade-in-left 1.5s;
+  animation-fill-mode: both;
 }
